# airgradient-gnome-extension

./: .editorconfig  .gitignore  LICENSE  README.md  airgradientAlerts.js  airgradientHttpClient.js  airgradientPopup.js  airgradientPresentation.js  airgradientSensors.js  desktopConfig.js  desktopConfigMonitor.js  eslint.config.js  extension.js  jsconfig.json  meson.build  metadata.json  package-lock.json  package.json  prefs.js  stylesheet.css
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
scripts/: check.sh  install-local.sh  pack.sh
tests/: config-smoke.mjs  presentation-smoke.mjs  sensors-smoke.mjs
